--- a/Osciloscopio/main.tex
+++ b/Osciloscopio/main.tex
@@ -64,8 +64,8 @@
 
 \author{Ann Author}
  \altaffiliation[Also at ]{Departamento de Física, Universidad de los Andes}%Lines break automatically or can be forced with \\
-\author{Second Author}%
- \email{Second.Author@institution.edu}
+\author{Sergio Iv\'an Rey}%
+ \email{si.rey1826@uniandes.edu.co}
 \affiliation{%
  Departamento de Física, Universidad de los Andes
 }%
@@ -74,8 +74,7 @@
              %  but any date may be explicitly specified
 
 \begin{abstract}
-An article usually includes an abstract, a concise summary of the work
-covered at length in the main body of the article. 
+Durante la presente práctica se estudiaron los fen\'omenos ondulatororios en circuitos RC, RLC y en osciladores acoplados. En una primera instancia se determin\'o experimentalmente el tiempo de caracter\'istico de carga y descarga de un condensador, donde se encontraron valores muy cercanos a los valores te\'oricos, sin embargo al cambiar de dispositivos se encontraron errores de m\'as de un 50\% lo que lleva a pensar que los \'ultimos dispositivos usados estaban en mal estado. En segunda instancia, se construy\'o un circuito RLC en serie donde, por dos m\'etodos diferentes se determin\'o la frecuencia natural del sistema junto con su tiempo caracter\'istico de carga y descarga. Los valores requirieron de segundas mediciones pero se encuentran dentro de lo esperado.
 \end{abstract}
 
 
