--- a/Osciloscopio/main.tex
+++ b/Osciloscopio/main.tex
@@ -152,6 +152,9 @@ V(t) = V_0 e^{\frac{-\gamma t}{2}}\cos(\omega_a t + \delta)
 
 \section{\label{sec:level1}Resultados y An\'alisis}
 
+\subsection{\label{sec:level2}Circuito RC en serie
+
+
 \subsection{\label{sec:level2}Circuito RLC Forzado}
 En este montaje utilizamos los valores $R = 0.8\Omega$, $L = 2mH$ y $C = 47nF$. Como se puede inferir, decidimos tomar \'unicamente la resistencia del inductor y dem\'as componentes del circuito. Con esta configuraci\'on pod\'iamos apreciar mejor la curva de resonancia y determinar mejor su m\'aximo. Una vez identificado el m\'aximo de amplitud, tomamos 16 datos de frecuencia y voltaje (pp y rms) alrededor del m\'aximo. Dichos datos se presentan en la tabla \ref{table:resonancia}. \\
 
