--- a/Osciloscopio/main.tex
+++ b/Osciloscopio/main.tex
@@ -147,7 +147,13 @@ V(t) = V_0 e^{\frac{-\gamma t}{2}}\cos(\omega_a t + \delta)
 
 
 \section{\label{sec:level1}Montaje experimental}
+El equipo que se utiliz\'o durante la práctica consist\'ia de dos generadores de onda, un osciloscopio y capacitores, inductores y resistencias de diferentes valores. 
+Para el primer montaje, se configur\'o el generador de onda para que generara una onda cuadrada con una frecuencia de 10Hz y una aplitud de 10V, sin embargo la sonda que conctaba \'este al osciloscopio distorsionaba los valores le\'idos. El circuito es un circuito RC en serie como el que se muestra en la figura. (FIGURA)
 
+
+Para la segunda manipulaci\'on, el generador de onda se reajust\'o para generar una onda sinusoidal, a continuaci\'on se construy\'o un circuito RLC en serie como el que se muestra en la figura. En este caso, el valor de R lo proporciona el inductor mismo. Debe anotarse que los valores de las figuras no son los usados durante la pr\'actica. (FIGURA)
+
+La tercera manipulaci\'on,  consisti\'o en conectar ambos generadores de onda directamente al osciloscopio para simular dos osciladores acoplados y ver el fen\'omeno de las Figuras de Lissajous. Ambos estaban ajustados para generar ondas sinusoidales. El ajuste posterior requiri\'o solamente de la calibraci\'on del osciloscopio para mostrar una señal como funci\'on de la otra. 
 
 
 \section{\label{sec:level1}Resultados y An\'alisis}
@@ -231,6 +237,7 @@ Adem\'as del m\'etodo anterior podemos confirmar esta medida calculando el ancho
 
 
 \section{\label{sec:level1}Conclusiones}
+
 
 
 
