--- a/Osciloscopio/main.tex
+++ b/Osciloscopio/main.tex
@@ -237,7 +237,9 @@ Adem\'as del m\'etodo anterior podemos confirmar esta medida calculando el ancho
 
 
 \section{\label{sec:level1}Conclusiones}
+El experiment\'o muestra con claridad los principios b\'sicos en osciladores y el uso del osciloscopio aumenta considerablemente la precisi\'on de las mediciones, as\'i como tambi\'en reduce enormemente el tiempo de medici\'on. 
 
+Para el caso del circuito RC se pudo observar , al menos durante las primeras configuraciones que el tiempo caracter\'istico coincid\'ia con el valor esperado $\tau = RC$.
 
 
 
