--- a/Osciloscopio/informeFinal.tex
+++ b/Osciloscopio/informeFinal.tex
@@ -329,7 +329,14 @@ Al cambiar contínuamente la frecuencia, la imagen mostrada en el osciloscopio d
 
 
 \section{\label{sec:level1}Conclusiones}
- \ \\
+ Durante este experimento se pudo observar cada uno de los fen\'omenos ondulatorios que se pretend\'ian estudiar con dificultades menores. \\
+
+El uso del osciloscopio redujo enormemente el tiempo de medici\'on como tambi\'en aument\'o la calidad y la exactitud de los datos tomados. Con ello puede concluirse que los circuitos RC, RLC y el sistema de osciladores acopaldos responden adecuadamente seg\'un la teor\'ia; los tiempos caracter\'isticos de cada sistema fueron medidos exitosamente y sus valores se encuentran dentro del rango esperado.\\ 
+
+El correcto uso del osciloscopio es fundamental para toda actividad investigativa, y es por ello que el desarrollo de esta pr\'actica de laboratorio resulta de gran ayuda para la formaci\'on del estudiante y es adem\'as un estudio que es f\'acilmente realizable y que s\'olo cont\'o con contratiempos menores.\\ 
+
+Se recomienda sin embargo siempre verificar los valores de los dispositivos electr\'onicos previo a la realizaci\'on del experimento con un mult\'imetro puesto que el desgaste y el mal uso pasado puede generar errores en las mediciones esperadas al comparar con los valores te\'oricos.\\
+
 
 
 \begin{thebibliography}{99} 
