--- a/Espectros_Atomicos/informeFinal.tex
+++ b/Espectros_Atomicos/informeFinal.tex
@@ -165,6 +165,7 @@ En este caso obtuvimos un valor de la constante de Rydberg dado por $R_{Exp} = 0
 \subsection{\label{sec:level2}Otros espectros atómicos}
 Una vez calculada la constante de Rydberg se procedió a estudiar los espectros de gases de mercurio, argón y kriptón. Debido a que estos gases son de átomos mucho más pesados, las soluciones de onda para los electrones son en este caso más complejas que la del hidrógeno, dado que en estos casos, los electrones que provocan las líneas espectrales pueden ser influenciados por la nube electrónica formada por los demás electrones. Por esto, las series de estos átomos pueden no ser descritas por una ecuación simple como la ecuación \ref{eq:balmer}. En este sentido, en esta sección nos limitamos a calcular el valor experimental de longitud de onda de cada una de las líneas observadas y compararlas con sus respectivos valores teóricos. Estos datos experimentales y teóricos se encuentran en la tabla \ref{table:otros}.\\
 
+En estos casos cabe resaltar que para los gases nobles observamos un espectro con líneas numerosas y difusas, no tan cuantizado y marcado como el caso del mercurio, el hidrógeno y el helio. Esto se puede atribuir a las libertades dadas por la ecuación de onda para estos átomos.\\
 
 \begin{table}[h!]
 \centering
@@ -193,20 +194,18 @@ Una vez calculada la constante de Rydberg se procedió a estudiar los espectros 
 
 De esta tabla es importante notar que la mayoría de las líneas calculadas tienen longitudes de onda teórica que entran dentro del rango de error calculado. También es importante notar que el error calculado con propagación de error sobre la curva de calibración tiene a ser mayor a mayores longitudes de onda, lo cual claramente no es característico de una relación lineal. Si hubieramos tomado la relación lineal en vez de la cuadrática, los errores para longitudes de onda grandes probablemente serían muy pequeños para dejar entrar el valor teórico en su rango. En general, la línea en la que se obtuvo más error era una línea a la que no se le pudo encontrar un valor cercano en la base de datos \cite{base}. Debido a este factor, y a la grán precisión con la que se contó en el experimento en general podemos decir que estas líneas podrían haber sido provocadas por isótopos de carga del átomo de Argón. En este caso, debido a la falta de un electrón, el potencial efectivo varía la ecuación de onda de los electrones , afectando el valor de la luz emitida en los saltos de energía. A pesar de esto, en general, se encontraron resultados satisfactorios, con muy buena exactitud en la medida.\\
 
+\section{\label{sec:level1}Conclusiones}
+En este laboratorio logramos observar correctamente la propagación del error dado por la mínima resolución de la regla usada. Debido a la mínima cantidad de fuentes de error en el experimento dada la calidad del montaje y la cuantización presente en el modelo teórico, se pudo observar que la fuente de error más importante provenía de la propagación del error de las ecuaciones del ajuste y las demás ecuaciones usadas. En general se obtuvieron valores experimentales con rangos de error en el que entraba el valor teórico. Además, la razón del error de propagación y la medida era en cada caso del mismo orden de magnitud, o al menos de un orden de magnitud similar a la razón entre la resolución mínima y la medida en la regla. Esto confirma nuestra afirmación.\\
+
 La segunda fuente de error más importante, confiando en el buen manejo experimental, era el grosor de las líneas espectrales. Sin embargo, el montaje permitía reducir dicho grosor hasta un valor cercano a la resolución mínima de la regla.\\
 
 En pocos casos encontramos errores relativamente grandes del orden del $2\%$ y del $5\%$, lo cual lo atribuimos a que no se pudo encontrar un valor cercano en la base de datos de espectros \cite{base}. En estos casos presumimos que dichas líneas podían pertenecer a isótopos de carga de los átomos observados.\\
 
 En cuanto a la constante de Rydberg, se obtuvo un error ($0.06\%$) un orden de magnitud menor al error absoluto común de las medidas ($0.1\%$), lo cual era de esperarse, pues se utilizó un set de 3 datos para calcularla. Con esto pudimos observar la importancia del análisis estadístico en la reducción del error experimental.\\
 
+Cualitativamente hablando, pudimos observar la cuantización de los niveles de energía de los átomos. Para el hidrógeno, mercurio y helio pudimos observar este efecto muy marcado, es decir, observamos solo líneas espectrales y prácticamente negrura entre ellas. Sin embargo para los gases nobles, donde el número de protones y electrones aumentaba considerablemente se observaron líneas espectrales cuantizadas, pero en su mayoría era muy difusas y numerosas, por lo cual no podemos afirmar que entre ellas había solo negrura.\\
 
-
-
-\section{\label{sec:level1}Conclusiones}
-En este laboratorio logramos observar correctamente la propagación del error dado por la mínima resolución de la regla usada. Debido a la mínima cantidad de fuentes de error en el experimento dada la calidad del montaje y la cuantización presente en el modelo teórico, se pudo observar que la fuente de error más importante provenía de la propagación del error de las ecuaciones del ajuste y las demás ecuaciones usadas. En general se obtuvieron valores experimentales con rangos de error en el que entraba el valor teórico. Además, la razón del error de propagación y la medida era en cada caso del mismo orden de magnitud, o al menos de un orden de magnitud similar a la razón entre la resolución mínima y la medida en la regla. Esto confirma nuestra afirmación.\\
-
- En este laboratorio logramos obtener la constante de Rydberg con un porcentaje de error de
-
+En general, consideramos que obtuvimos resultados satisfactorios en este experimento, con los errores completamente justificados y con una precisión razonable dada la precisión del aparato.\\
 
 \begin{thebibliography}{99} 
 \bibitem{base}{\it Physical Measurement Laboratory}{http://www.nist.gov/pml/index.cfm}.\\ 
