--- a/Espectros_Atomicos/informeFinal.tex
+++ b/Espectros_Atomicos/informeFinal.tex
@@ -97,7 +97,9 @@ V(t) = V_0 e^{\frac{-\gamma t}{2}}\cos(\omega_a t + \delta)
 
 \section{\label{sec:level1}Resultados y An\'alisis}
 \subsection{\label{sec:level2}Calibración con He}
-Debido a que no conocíamos en principio la relación de la medida de la regla proporcionada, y tampoco conocíamos las unidades de dicha regla, necesitabamos de unas líneas espectrales de referencia para poder calibra el montaje. En nuestro caso, dado que queríamos estudiar las líneas del hidrógeno y la constante de Rydberg, usamos helio para dicho calibre. El helio tiene cuatro líneas espectrales fuertes en el espectro visible, por lo cual resulta un buén candidato de referencia. Los valores teóricos de longitud de onda de las líneas observadas de Helio junto a sus respectivas distancias observadas en la regla, se encuentran consignadas en la tabla \ref{table:helio}.
+Debido a que no conocíamos en principio la relación de la medida de la regla proporcionada, y tampoco conocíamos las unidades de dicha regla, necesitabamos de unas líneas espectrales de referencia para poder calibra el montaje. En nuestro caso, dado que queríamos estudiar las líneas del hidrógeno y la constante de Rydberg, usamos helio para dicho calibre. El helio tiene cuatro líneas espectrales fuertes en el espectro visible, por lo cual resulta un buén candidato de referencia. Los valores teóricos de longitud de onda de las líneas observadas de Helio junto a sus respectivas distancias observadas en la regla, se encuentran consignadas en la tabla \ref{table:helio}.\\
+
+Es preciso resaltar que las líneas que ponemos en la tabla eran las líneas que eran visibles dada la luminosidad del bombillo de la regla. Posiblemente habían otras líneas más tenues en el espectro visible pero debido a la intensidad de la fuente del bombillo, estas líneas eran opacadas por la luz de fondo. Esta cuestión reduce nuestra muestra de líneas para la calibración y para el resto del experimento, pero no afecta el error particular para cada línea, mas bién, afecta un poco el análisis estadístico. \\
 
 \begin{table}[h!]
 \centering
@@ -203,7 +205,7 @@ En pocos casos encontramos errores relativamente grandes del orden del $2\%$ y d
 
 En cuanto a la constante de Rydberg, se obtuvo un error ($0.06\%$) un orden de magnitud menor al error absoluto común de las medidas ($0.1\%$), lo cual era de esperarse, pues se utilizó un set de 3 datos para calcularla. Con esto pudimos observar la importancia del análisis estadístico en la reducción del error experimental.\\
 
-Cualitativamente hablando, pudimos observar la cuantización de los niveles de energía de los átomos. Para el hidrógeno, mercurio y helio pudimos observar este efecto muy marcado, es decir, observamos solo líneas espectrales y prácticamente negrura entre ellas. Sin embargo para los gases nobles, donde el número de protones y electrones aumentaba considerablemente se observaron líneas espectrales cuantizadas, pero en su mayoría era muy difusas y numerosas, por lo cual no podemos afirmar que entre ellas había solo negrura.\\
+Cualitativamente hablando, pudimos observar la cuantización de los niveles de energía de los átomos. Para el hidrógeno, mercurio y helio pudimos observar este efecto muy marcado, es decir, observamos solo líneas espectrales y prácticamente negrura entre ellas. Sin embargo para los gases nobles, el número de protones y electrones hacían que la función de onda para los electrones permitiera muchos saltos en el espectro visible, lo cual se reflejaba en numerosas líneas espectrales mayoría muy difusas. Por esto, no podemos afirmar que entre dichas líneas había solo negrura y aunque se observó la cuantización en estos gases nobles, el efecto no fue tan marcado.\\
 
 En general, consideramos que obtuvimos resultados satisfactorios en este experimento, con los errores completamente justificados y con una precisión razonable dada la precisión del aparato.\\
 
